--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,10 @@
     <header class="z-index-900 shadow-10 height-navbar">
       <nav class="h-100 w-100">
         <div class="container flex-row align-items-center h-100 pr-05 pl-05">
-          <div data-page="home" class="pr-1 navbar-logo cursor-pointer">
+          <div data-page="home" class="pr-1 navbar-logo cursor-pointer show-always">
             <img src="./img/logo-58x58.svg" width="58px" height="58px" />
           </div>
-          <div data-page="home" class="navbar-title primary-color cursor-pointer">
+          <div data-page="home" class="navbar-title primary-color cursor-pointer show-always">
             <h2 data-label-id="title-app"></h2>
           </div>
           <div class="flex-grow-1 flex"></div>
